--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: alpha_to_do_list
+name: beta_time_machine
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl : ^0.16.0
+  table_calendar: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
