--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   table_calendar: ^2.0.1
   sqflite : ^1.1.7+2 
   path_provider : ^1.4.2
-
+  charts_flutter: 
+  flutter_dialogflow: ^0.1.2
+  
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +47,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+   - assets/credentials.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
