--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/chinkesh/Library/Android/sdk
-flutter.sdk=/Users/chinkesh/development/flutter
+sdk.dir=C:\\Users\\tripa\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
