--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,7 @@ dependencies:
   dynamic_theme: ^1.0.1
   provider: 
   flare_flutter: ^1.5.15
-
-  
+  #charts_flutter: ^0.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
